add contact section

--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
       crossorigin="anonymous"
     />
 
-    <!--
-    <link
-      rel="stylesheet"
-      href="vendors/icons/iconic/font/css/open-iconic.css"
-    />
-    -->
-
     <link rel="stylesheet" href="styles/css/styles.css" />
     <script defer src="./vendors/icons/fontawesome/js/all.min.js"></script>
     <script src="./scripts/more.js"></script>
@@ -59,9 +52,9 @@
             </li>
             <!-- Contact -->
             <li class="nav-item menu__item">
-              <i class="fas fa-envelope menu__item__icon"></i>
+              <i class="fas fa-mug-hot menu__item__icon"></i>
               
-              <a href="#contact" class="nav-link">Contact</a>
+              <a href="#contact" class="nav-link">Let's talk</a>
             </li>
           </ul>
         </div>
@@ -199,7 +192,7 @@
                         <a href="https://gentle-gorge-64820.herokuapp.com/" target="_blank">Site</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="fab fa-github"></i>
+                        <i class="fab fa-github-alt"></i>
                         <a href="https://github.com/RCode-Blue/ResourceScheduler_Front" target="_blank">Repo (front)</a>
                       </div>
                       <div class="col project__txt__links__item">
@@ -280,7 +273,7 @@
                         <a href=""  target="_blank">Repo (front)</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="fab fa-github"></i>
+                        <i class="fab fa-github-alt"></i>
                         <a href=""  target="_blank">Repo (back)</a>
                       </div>
                       <div class="col project__txt__links__item">
@@ -318,7 +311,7 @@
                         <a href="https://eloquent-newton-ea4ac9.netlify.app/" target="_blank">Site</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="fab fa-github"></i>
+                        <i class="fab fa-github-alt"></i>
                         <a href="https://github.com/RCode-Blue/rebekah-price-dietitian"  target="_blank">Repo</a>
                       </div>
                     </div>
@@ -351,7 +344,7 @@
                         <a href="https://visit-mars-dzjgy0e3b.now.sh/" target="_blank">Site</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="fab fa-github"></i>
+                        <i class="fab fa-github-alt"></i>
                         <a href="https://github.com/RCode-Blue/visit_mars"  target="_blank">Repo</a>
                       </div>
                     </div>
@@ -362,6 +355,41 @@
           </div>
         </section>
       </div>
+      <!-- Contact -->
+      <section class="contact" id="contact">
+        <div class="contact__heading">
+          Contact Me
+        </div>
+        <div class="contact__content">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-1">
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="col-1">
+                <a href="https://github.com/RCode-Blue" target="_blank">Github</a>
+              </div>
+            </div>
+            <div class="row justify-content-center">
+              <div class="col-1">
+                <i class="fab fa-linkedin-in"></i>
+              </div>
+              <div class="col-1">
+                <a href="https://www.linkedin.com/in/liewricky/" target="_blank">LinkedIn</a>
+              </div>
+            </div>
+            <div class="row justify-content-center">
+              <div class="col-1">
+                <i class="fas fa-envelope"></i>
+              </div>
+              <div class="col-1">
+                <a href="mailto:rickyliew@hotmail.com">email</a>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
