--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="nav-item menu__item">
               <i class="fas fa-file menu__item__icon"></i>
               
-              <a href="resume" class="nav-link">Resumè</a>
+              <a href="./doc/Ricky_Liew_Resume.pdf" class="nav-link">Resumè</a>
             </li>
             <!-- Skills -->
             <li class="nav-item menu__item">
@@ -355,41 +355,57 @@
           </div>
         </section>
       </div>
+
+      <div class="wrapper2">
       <!-- Contact -->
-      <section class="contact" id="contact">
-        <div class="contact__heading">
-          Contact Me
-        </div>
-        <div class="contact__content">
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-1">
-                <i class="fab fa-github"></i>
+        <section class="contact" id="contact">
+          <div class="contact__heading">
+            Contact Me
+          </div>
+          <div class="contact__content">
+            <div class="container">
+              <!-- CV -->
+              <div class="row justify-content-center">
+                <div class="col-1">
+                  <i class="fas fa-file-pdf"></i>
+                </div>
+                <div class="col-1">
+                  <a href="./doc/Ricky_Liew_Resume.pdf" target="_blank">Resumè</a>
+                </div>
               </div>
-              <div class="col-1">
-                <a href="https://github.com/RCode-Blue" target="_blank">Github</a>
+              <!-- github -->
+              <div class="row justify-content-center">
+                <div class="col-1">
+                  <i class="fab fa-github"></i>
+                </div>
+                <div class="col-1">
+                  <a href="https://github.com/RCode-Blue" target="_blank">Github</a>
+                </div>
               </div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-1">
-                <i class="fab fa-linkedin-in"></i>
+              <!-- LinkedIn -->
+              <div class="row justify-content-center">
+                <div class="col-1">
+                  <i class="fab fa-linkedin-in"></i>
+                </div>
+                <div class="col-1">
+                  <a href="https://www.linkedin.com/in/liewricky/" target="_blank">LinkedIn</a>
+                </div>
               </div>
-              <div class="col-1">
-                <a href="https://www.linkedin.com/in/liewricky/" target="_blank">LinkedIn</a>
+              <!-- Email -->
+              <div class="row justify-content-center">
+                <div class="col-1">
+                  <i class="fas fa-envelope"></i>
+                </div>
+                <div class="col-1">
+                  <a href="mailto:rickyliew@hotmail.com">email</a>
+                </div>
               </div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-1">
-                <i class="fas fa-envelope"></i>
-              </div>
-              <div class="col-1">
-                <a href="mailto:rickyliew@hotmail.com">email</a>
-              </div>
-            </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
+
+
     </div>
   </body>
 </html>
