--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <a href="https://github.com/RCode-Blue/ResourceScheduler_Front" target="_blank">Repo (front)</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="fab fa-github"></i>
+                        <i class="fab fa-github-alt"></i>
                         <a href="https://github.com/RCode-Blue/ResourceScheduler_Back" target="_blank">Repo (back)</a>
                       </div>
                       <div class="col project__txt__links__item">
@@ -269,7 +269,7 @@
                         <a href="https://lit-harbor-79520.herokuapp.com/" target="_blank">Site</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="fab fa-github"></i>
+                        <i class="fab fa-github-alt"></i>
                         <a href=""  target="_blank">Repo (front)</a>
                       </div>
                       <div class="col project__txt__links__item">
