--- a/index.html
+++ b/index.html
@@ -188,19 +188,19 @@
                   <div class="container project__txt__links">
                     <div class="row">
                       <div class="col project__txt__links__item">
-                        <i class="fas fa-globe"></i>
+                        <a href="https://gentle-gorge-64820.herokuapp.com/" target="_blank"><i class="fas fa-globe"></i></a>
                         <a href="https://gentle-gorge-64820.herokuapp.com/" target="_blank">Site</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="fab fa-github-alt"></i>
+                        <a href="https://github.com/RCode-Blue/ResourceScheduler_Front" target="_blank"><i class="fab fa-github-alt"></i></a>
                         <a href="https://github.com/RCode-Blue/ResourceScheduler_Front" target="_blank">Repo (front)</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="fab fa-github-alt"></i>
+                        <a href="https://github.com/RCode-Blue/ResourceScheduler_Back" target="_blank"><i class="fab fa-github-alt"></i></a>
                         <a href="https://github.com/RCode-Blue/ResourceScheduler_Back" target="_blank">Repo (back)</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="far fa-play-circle"></i>
+                        <a href="https://youtu.be/crB_9eQvnKE" target="_blank"><i class="far fa-play-circle"></i></a>
                         <a href="https://youtu.be/crB_9eQvnKE" target="_blank">Demo</a>
                       </div>
                     </div>
@@ -265,20 +265,20 @@
                   <div class="container project__txt__links">
                     <div class="row">
                       <div class="col project__txt__links__item">
-                        <i class="fas fa-globe"></i>
+                        <a href="https://lit-harbor-79520.herokuapp.com/" target="_blank"><i class="fas fa-globe"></i></a>
                         <a href="https://lit-harbor-79520.herokuapp.com/" target="_blank">Site</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="fab fa-github-alt"></i>
-                        <a href=""  target="_blank">Repo (front)</a>
+                        <a href="https://github.com/RCode-Blue/Onboarding-Front" target="_blank"><i class="fab fa-github-alt"></i></a>
+                        <a href="https://github.com/RCode-Blue/Onboarding-Front" target="_blank">Repo (front)</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="fab fa-github-alt"></i>
-                        <a href=""  target="_blank">Repo (back)</a>
+                        <a href="https://github.com/RCode-Blue/Onboarding" target="_blank"><i class="fab fa-github-alt"></i></a>
+                        <a href="https://github.com/RCode-Blue/Onboarding" target="_blank">Repo (back)</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="far fa-play-circle"></i>
-                        <a href=""  target="_blank">Demo</a>
+                        <a href="https://youtu.be/hvmeB0a2bRE" target="_blank"><i class="far fa-play-circle"></i></a>
+                        <a href="https://youtu.be/hvmeB0a2bRE" target="_blank">Demo</a>
                       </div>
                     </div>
                   </div>
@@ -307,12 +307,12 @@
                   <div class="container project__txt__links">
                     <div class="row">
                       <div class="col project__txt__links__item">
-                        <i class="fas fa-globe"></i>
+                        <a href="https://eloquent-newton-ea4ac9.netlify.app/" target="_blank"><i class="fas fa-globe"></i></a>
                         <a href="https://eloquent-newton-ea4ac9.netlify.app/" target="_blank">Site</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="fab fa-github-alt"></i>
-                        <a href="https://github.com/RCode-Blue/rebekah-price-dietitian"  target="_blank">Repo</a>
+                        <a href="https://github.com/RCode-Blue/rebekah-price-dietitian" target="_blank"><i class="fab fa-github-alt"></i></a>
+                        <a href="https://github.com/RCode-Blue/rebekah-price-dietitian" target="_blank">Repo</a>
                       </div>
                     </div>
                   </div>
@@ -340,11 +340,11 @@
                   <div class="container project__txt__links">
                     <div class="row">
                       <div class="col project__txt__links__item">
-                        <i class="fas fa-globe"></i>
+                        <a href="https://visit-mars-dzjgy0e3b.now.sh/" target="_blank"><i class="fas fa-globe"></i></a>
                         <a href="https://visit-mars-dzjgy0e3b.now.sh/" target="_blank">Site</a>
                       </div>
                       <div class="col project__txt__links__item">
-                        <i class="fab fa-github-alt"></i>
+                        <a href="https://github.com/RCode-Blue/visit_mars"  target="_blank"><i class="fab fa-github-alt"></i></a>
                         <a href="https://github.com/RCode-Blue/visit_mars"  target="_blank">Repo</a>
                       </div>
                     </div>
